--- a/book.bib
+++ b/book.bib
@@ -296,4 +296,22 @@
   publisher={Springer}
 }
 
+@article{freund1997decision,
+  title={A decision-theoretic generalization of on-line learning and an application to boosting},
+  author={Freund, Yoav and Schapire, Robert E},
+  journal={Journal of computer and system sciences},
+  volume={55},
+  number={1},
+  pages={119--139},
+  year={1997},
+  publisher={Elsevier}
+}
 
+@article{friedman2001greedy,
+  title={Greedy function approximation: a gradient boosting machine},
+  author={Friedman, Jerome H},
+  journal={Annals of statistics},
+  pages={1189--1232},
+  year={2001},
+  publisher={JSTOR}
+}
